--- a/SecuEHR-master/backend/package.json
+++ b/SecuEHR-master/backend/package.json
@@ -21,8 +21,11 @@
     "express-fileupload": "^1.5.1",
     "express-rate-limit": "^7.1.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.0",
-    "multer": "^1.4.5-lts.1",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.7"
   }
 }
