--- a/Medi-Track/backend/package.json
+++ b/Medi-Track/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.5.1",
     "express-rate-limit": "^7.1.4",
+    "firebase": "^11.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
