--- a/Medi-Track/frontend/package.json
+++ b/Medi-Track/frontend/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.14.2",
     "styled": "^1.0.0",
     "styled-components": "^6.1.1"
