--- a/Medi-Track/frontend/package.json
+++ b/Medi-Track/frontend/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "@tsparticles/all": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.0",
     "components": "^0.1.0",
