--- a/Medi-Track/frontend/package.json
+++ b/Medi-Track/frontend/package.json
@@ -20,10 +20,15 @@
     "components": "^0.1.0",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
+    "firebase": "^11.0.2",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^10.0.6",
     "styled": "^1.0.0",
     "styled-components": "^6.1.1"
   },
